ensure adequate spacing for modals

--- a/styles/components/choose-players-modal.css
+++ b/styles/components/choose-players-modal.css
@@ -1,5 +1,6 @@
 @layer component {
   #choose-players-form {
+    margin-top: 20px;
     display: grid;
     gap: var(--sm-gap);
     place-items: center;
