--- a/styles/components/modal.css
+++ b/styles/components/modal.css
@@ -10,7 +10,7 @@
 
   .close-modal {
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: 15px;
+    right: 15px;
   }
 }
